# ChangeLog for media-gfx/svg2png
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Feb 2009; Michał Ziąbkowski <mziab@o2.pl>
  +files/svg2png-as-needed.patch, svg2png-0.1.3.ebuild:
  Added patch for --as-needed.

  10 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl> svg2png-0.1.3.ebuild:
  Fixed some repoman reported errors.

  26 Jan 2008; Piotr Szymaniak <lazy_bum@o2.pl> svg2png-0.1.3.ebuild:
  Added ~amd64 KEYWORD.

  07 Jan 2008; Piotr Szymaniak <lazy_bum@o2.pl> svg2png-0.1.3.ebuild:
  Added proper license, fixed SRC_URI.

*svg2png-0.1.3 (02 Jan 2008)

  02 Jan 2008; Piotr Szymaniak <lazy_bum@o2.pl> +svg2png-0.1.3.ebuild:
  Initial ebuild.