@@ -1,4 +1,4 @@
 AUX svg2png-as-needed.patch 574 RMD160 dfe00a625d6252e24d0044208c558ac3cb30edd2 SHA1 6805c6300c21415e6038cbf2c6cf05a97e68cb41 SHA256 fbf82c0372da7177bbdb4c636a512c0bdefa4b50ac057dcfc202dcf4e86ec0fb
 DIST svg2png-0.1.3.tar.gz 82331 RMD160 3c1e007200c218af21559a2a9abe9dbb318b38c8 SHA1 afd207ef745fe2e20e01585bbc9a576e7cc9caf5 SHA256 e658fde141eb7ce981ad63d319339be5fa6d15e495d1315ee310079cbacae52b
-EBUILD svg2png-0.1.3.ebuild 558 RMD160 3c862d328eccdd609dcdb07f7c4a15edf5e02a6a SHA1 cb493ff37dc2ce4a71dd08def1b90b3bd50ccc19 SHA256 40249080eed19f42ef086088a1c1afa4097533ec0f443d02bd6c49b976205c43
-MISC ChangeLog 688 RMD160 20274444592d4fb718ecb29226beab0d98634c0a SHA1 f7fe2d67c9b06e19afd9746b9fc97d3ce2972e40 SHA256 e56c94b5b41394363df021051a55ca411f9060207fcedf865c8206e6bfa2f4de
+EBUILD svg2png-0.1.3.ebuild 482 RMD160 0c9d99a85bd8363d2234e35e893898107052dda2 SHA1 4ca63dbd83a1a5c78d047710135af674a5698414 SHA256 33b88c0e95943fa50a69a674e62209b75f01b1e28b636b5b8160d7ce589e8e4c
+MISC ChangeLog 803 RMD160 1504d772ac625967453875de0b84ff991eb26d5c SHA1 012c1e98aade43689808524cba2411fd33593324 SHA256 068ed34651ee420953585613eee747d64b8a64a0f25a82bcaa16b8d8a5c84230
