@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/svg2png
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  29 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> svg2png-0.1.3.ebuild:
+  Simplified ebuild thanks to base.eclass.
 
   11 Feb 2009; Michał Ziąbkowski <mziab@o2.pl>
   +files/svg2png-as-needed.patch, svg2png-0.1.3.ebuild:
